# cppJsonGraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.json  graph.json  graph.json.txt  graphs.json  makefile  pretty.json  test.json
app/: CMakeLists.txt  main.cpp
include/cppJsonGraph/: base.hpp  cjgException.hpp  deserializer.hpp  graph.hpp  graphEdge.hpp  graphNode.hpp  informedException.hpp  jgReader.hpp  jgWriter.hpp  schema.hpp  serializer.hpp  utility.hpp
src/: CMakeLists.txt  base.cpp  base.hpp  cjgException.cpp  deserializer.cpp  graph.cpp  graphEdge.cpp  graphNode.cpp  informedException.cpp  jgReader.cpp  jgReader.hpp  jgWriter.cpp  main.cpp  serializer.cpp  utility.cpp  utility.hpp
